# cerver

./: .gitignore  .gitmodules  CMakeLists.txt  Containerfile  Makefile  docker.config  http.c  included.config  server.c  test.config
scripts/: clean  clean_cmake_cache  compile-cerver  compile-deps-nix  compile-deps-win  configure  generate-self-signed-keys  mingw-w64-x86_64.cmake
src/: handler.c  handler.h  http.c  http.h  main.c  response.h  server.c  server.h
src/config/: commands.c  commands.h  config.c  config.h  config_t.c  config_t.h
src/dir/: dir.c  dir.h  filereader.c  filereader.h
src/hashmap/: hash.c  hash.h  hashmap.c  hashmap.h  primes.h
src/http/: http.c  http.h
src/mime/: mime.c  mime.h
src/server/: handler.c  handler.h  response.c  response.h  server.c  server.h
src/threads/: thread_pool.c  thread_pool.h
